test/extern/bradc/sparseToExtern.good
sparseToExtern.chpl:12: error: Only single-locale rectangular arrays can be passed to an external routine argument with array type
